fix js path in index.html

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 	<div class="menu-bg"></div>
 
-	<script src='/js/index.js' type='module'></script>
+	<script src='./js/index.js' type='module'></script>
 </body>
 
 </html>
